# rs-thp-clidev

./: .env  Cargo.toml
src/: main.rs
src/cmds/: seed.rs
