[package]
name = "cli_tools"
version = "0.1.0"
edition = "2024"

[dependencies]
logger ={ path = "../logger" }
dotenvy = "0.15.7"
sqlx = { version = "0.8.5", features = ["postgres", "uuid", "chrono", "runtime-tokio-native-tls"] }
tokio = { version = "1.44.2", features = ["full"] }
tracing = "0.1.41"
uuid = { version = "1.16.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde", "clock"] }
fake = "4.3.0"
argon2 = "0.5.3"
rand = "0.9.1"